--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 	
   "name": "TakeNote",
-  "description": "Notifies you",
+  "description": "Notifies you about upcoming contests",
   "background": {"scripts" : ["bg.js"]},
   "version": "1.0",
 
